--- a/pom.xml
+++ b/pom.xml
@@ -58,19 +58,6 @@
     </repository>
   </repositories>
 
-  <!--
-  <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-    <id>ossrh</id>
-    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-  </distributionManagement>
-  -->
-
   <dependencyManagement>
 
     <dependencies>
@@ -279,6 +266,9 @@
       <build>
         <plugins>
 
+          <!--
+            See https://central.sonatype.org/publish/publish-portal-maven/
+          -->
           <plugin>
             <groupId>org.sonatype.central</groupId>
             <artifactId>central-publishing-maven-plugin</artifactId>
@@ -286,6 +276,7 @@
             <extensions>true</extensions>
             <configuration>
               <publishingServerId>central</publishingServerId>
+              <autoPublish>true</autoPublish>
             </configuration>
           </plugin>
 
